webDev/Projects/flexbox-business-site-starting/Resources/css/styles.css
/*general properties*/
html {
    font-size: 1em;
    background-color: #292538;
    color: #FBFAFA;
    font-family: "Roboto", "Noto Sans JP", sans-serif;
}

h1 {
    font-size: 2.125rem;  
    letter-spacing: 0.2rem; 
}
a {
    color: #292538;
}

a:visited {
    color: #998FAF;
}

a:hover {
    color: #998FAF;
}
a:active {
    color: #F0803C;
}

button {
    width: 35%;
    background-color: #F0803C;
    font-weight: 700;
    font-size:1 rem;
    aspect-ratio: 2.3/ 1;
    padding: 2.5% 5%;
    box-shadow: 4px 4px 0px #292538;
    color: #FBFAFA;
    border-radius: 15px;
}

button:visited {
    background-color: #998FAF;
}

button:hover {
    cursor: pointer;
}

button:active {
    background-color: #292538;
    box-shadow: none;
    margin-left:4px;
    margin-top: 4px;
}

/*container properties*/
div.container {
    background-color: #FBFAFA ;
    border-radius: 15px;
    box-shadow: 10px 10px #F0803C;
} 
 div.container.text {
    display:flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
    width: 40%;
    height: 100%;
}

div.container.text h1 {
    width: 80%;
    color:#CE2558;
    text-shadow: 0px 4px 4px #292538;
    font-size: 220%;
    font-weight: 500;
    text-align: center;
}
div.container.text h1 bold {
    background-color:#CE2558;
    color: #FBFAFA;
    border-radius: 15px;
    line-height: 1.1;
}


 div.container.img {
    width: 60%;
    height: 100%;
    box-shadow: none;
}
div.container.img img {
    width: 100%;
    height: 100%;
}


/*navegation*/
nav {
    z-index: 10;
    border-radius:0 0 15px 15px;
    position: fixed;
    display: flex;
    justify-content: space-between;
    letter-spacing: 0.2rem;
    align-items: center;
    background-color:#CE2558;
    box-shadow: rgba(56, 29, 42, 0.25);
    width: 100%;
    height: 4.5rem;
}

nav h1 {
    background-color:#CE2558;
    color: #F0803C;
    margin-left: 4rem;
    text-shadow: 2px 2px 5px rgba(56, 29, 42, 0.75);
}

li {
    list-style: none;
}

nav ul {
    display: flex;
    margin: 1rem;
    justify-content: space-around;
    background-color:#CE2558;
}

nav a {
    padding:0.5rem;
    text-decoration: none;
    background-color:#CE2558;
}

/*body -> main*/
main {
    position:relative;
    grid-template-rows: 25.5rem repeat(2,1fr);
    grid-template-columns: 1fr;
    display: grid;
    top:5rem;
}

/* body -> sections*/
section {
    display: flex;
    padding: 4rem 1.5rem;
}


/*main content*/
section#main-content {
    display: flex;
    grid-row: 1/span 1;
    grid-column: 1 / span 1;

    justify-content: space-around;
    gap: 2rem;
}


#main-content img {
    height: 100%;
    width: 100%;
    overflow: hidden;
    border-radius: 15px;
    filter: brightness(1.8) contrast(0.70);

}


/*main product*/
section#main-product {
    display: grid;
    gap: 1%;
    grid-template-rows: repeat(3,1fr);
    grid-template-columns: 50% 50%;
    grid-auto-rows: 0;
    overflow: scroll;
    

    grid-row: 2/ span 1;
    grid-column:1/ span 1;
    flex-wrap: wrap;

    color: #CE2558;
}


section#main-product div.container {
    display: flex;
    flex-wrap: wrap;
    width: 90%;
    padding: 3%;
    aspect-ratio: 1/ 1.15;
    background-color: #FBFAFA;
    border-radius: 15px;
    box-shadow: none;
}

section#main-product div.container.left {
    justify-content: flex-start;
    grid-row: 1/ span 3;
    grid-column:1/ span 1;
    
}

section#main-product div.container.right {
    justify-content: flex-end;
    grid-row: span 2 / -1;
    grid-column:2/ span 1;
    
    aspect-ratio: 1/ 1.2;
    margin-top: 15%;
    margin-right: 0;
    margin-left: 10%;
}

section#main-product div.text {
    display: flex;
    flex-wrap: wrap;
    flex-direction: column;
    padding-top: 5%;
    height: auto;
    flex: 1 1 100%;
    font-size: 90%;
    color: black;
    line-height: 1.5;
    overflow: scroll;
    text-align: center;
}

section#main-product div.text p {
    padding: 10%;
}

section#main-product div.text h2 {
    font-size: 1.5em;
    color:#CE2558;
}

section#main-product div.text bold {
    font-size: 1.5em;
    font-weight: 700;
}

section#main-product div.container.img {
    display: flex;
    justify-content: center;
    align-items: center;
    flex: 0 0  107%;
    width: 75%;
    height: 45%;
    box-shadow: none;
    overflow: visible;
}

section#main-product div.container.img span.img-info {
    display: none;
}

section#main-product div.container.img span.img-info:hover {
    display:block;
    }

section#main-product div.container.left div.container.img {
    margin-left: 10%;
    margin-top: 5%;
    background-color: #F0803C;
}

section#main-product div.container.right div.container.img {
    margin-right: 10%;
    margin-bottom: 5%;
    background-color: #CE2558;
}

section#main-product div.container.left div.container.img img {
    width: 100%;
    height: 100%;
    mix-blend-mode: lighten;
}

section#main-product div.container.right div.container.img img{
    width: 80%;
    height: 70%;
    mix-blend-mode:normal;
}

section#main-product div.container.img .background {
    width: 85%;
    height: 75%;
    background-color: #CE2558;
}

section#founders {

}

footer {

 background-color: #998FAF;
 color: #FBFAFA;   
}


/*media settings*/

@media only screen and (min-width: 769px) {
    html {
        font-size: 1.1em;
    }    
    
    section#main-product div.container {
        
        aspect-ratio: 1/ 1;
        
    }

}


@media only screen and (max-width: 768px) {
    html {
        font-size: 1.1em;
    }   
}

